--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="那样记账 - 一款轻量级的 Android 端记账工具。">
+  <meta name="author" content="Bakumon">
 
   <title>那样记账 - 轻量级记账工具</title>
 
@@ -23,7 +23,7 @@
   <link rel="shortcut icon" href="img/wallet.png" type="image/png" />
 
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+  <!-- <link rel="stylesheet" href="device-mockups/device-mockups.min.css"> -->
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.min.css" rel="stylesheet">
@@ -37,7 +37,6 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">那样记账</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -93,7 +92,7 @@
           <p>这是一款 Android 端的记账应用，可以在 Google Play 或 酷安下载</p>
           <div class="badges">
             <a class="badge-link" href="https://play.google.com/store/apps/details?id=me.bakumon.moneykeeper" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+            <a class="badge-link" href="https://www.coolapk.com/apk/me.bakumon.moneykeeper" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -103,8 +102,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>功能特性</h2>
+        <p class="text-muted">适合个人记账的功能特性</p>
         <hr>
       </div>
       <div class="row">
@@ -181,8 +180,8 @@
         new friends!</h2>
       <ul class="list-inline list-social">
         <li class="list-inline-item social-twitter">
-          <a href="#">
-            <i class="fab fa-twitter"></i>
+          <a href="mailto:bakumon.me@gmail.com">
+            <i class="fas fa-envelope"></i>
           </a>
         </li>
         <li class="list-inline-item social-facebook">
