--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <h3>简单快速</h3>
+                  <p class="text-muted">可设置打开应用直接记账、或直接通过 Shortcut 快速记账；根据所选记账类型自动选择上次使用的账户</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <h3>多维度统计</h3>
+                  <p class="text-muted">自由设置月份开始日期；查看每日收支详细情况；查看自定义月份的收支比重；清晰得知钱花在了哪儿</p>
                 </div>
               </div>
             </div>
@@ -144,15 +144,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <h3>资金账户</h3>
+                  <p class="text-muted">包含普通账户、信用账户、以及借入借出</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <h3>数据安全</h3>
+                  <p class="text-muted">数据掌握在自己手中，可全量备份在手机内部储存，也提供 WebDAV 云盘储存</p>
                 </div>
               </div>
             </div>
