--- a/index.html
+++ b/index.html
@@ -127,32 +127,32 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
+                  <i class="icon-plane text-primary"></i>
                   <h3>简单快速</h3>
-                  <p class="text-muted">可设置打开应用直接记账、或直接通过 Shortcut 快速记账；根据所选记账类型自动选择上次使用的账户</p>
+                  <p class="text-muted">打开应用或通过 Shortcut 快速记账；根据所选记账类型自动选择上次使用的账户</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
+                  <i class="icon-chart text-primary"></i>
                   <h3>多维度统计</h3>
-                  <p class="text-muted">自由设置月份开始日期；查看每日收支详细情况；查看自定义月份的收支比重；清晰得知钱花在了哪儿</p>
+                  <p class="text-muted">每日收支柱形图；收支分类饼图；年度统计</p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
+                  <i class="icon-wallet text-primary"></i>
                   <h3>资金账户</h3>
-                  <p class="text-muted">包含普通账户、信用账户、以及借入借出</p>
+                  <p class="text-muted">包含普通账户、信用账户以及借入借出</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
+                  <i class="icon-lock text-primary"></i>
                   <h3>数据安全</h3>
-                  <p class="text-muted">数据掌握在自己手中，可全量备份在手机内部储存，也提供 WebDAV 云盘储存</p>
+                  <p class="text-muted">数据掌握在用户手中，可全量备份在手机内部储存，同时可选 WebDAV 云盘储存</p>
                 </div>
               </div>
             </div>
