--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <p>这是一款 Android 端的记账应用，可以在 Google Play 或 酷安下载</p>
           <div class="badges">
             <a class="badge-link" href="https://play.google.com/store/apps/details?id=me.bakumon.moneykeeper" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="https://www.coolapk.com/apk/me.bakumon.moneykeeper" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
+            <a class="badge-link" href="https://www.coolapk.com/apk/me.bakumon.moneykeeper" target="_blank"><img src="img/coolapk.jpeg" alt=""></a>
           </div>
         </div>
       </div>
