--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
         <i class="fas fa-heart"></i>
         new friends!</h2>
       <ul class="list-inline list-social">
-        <li class="list-inline-item social-twitter">
+        <li class="list-inline-item social-email">
           <a href="mailto:bakumon.me@gmail.com">
             <i class="fas fa-envelope"></i>
           </a>
         </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+        <li class="list-inline-item social-github">
+          <a href="https://github.com/NaWallet" target="_blank">
+            <i class="fab fa-github"></i>
           </a>
         </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
+        <li class="list-inline-item social-feedback">
+          <a href="https://support.qq.com/product/41058" target="_blank">
+            <i class="far fa-smile"></i>
           </a>
         </li>
       </ul>
@@ -205,6 +205,9 @@
         <li class="list-inline-item">
           <a href="https://github.com/NaWallet/Resources/blob/master/PrivacyPolicy.md" target="_blank">隐私政策</a>
         </li>
+        <li class="list-inline-item">
+            <a href="https://www.notion.so/bakumon/b4047f9bee84420e9aeef9aecec8702b?v=7404de0d835f4833844ae014d19538de" target="_blank">开发计划</a>
+          </li>
         <li class="list-inline-item">
           <a href="https://github.com/NaWallet/Resources/blob/master/FAQ.md" target="_blank">FAQ</a>
         </li>
