--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
   <!-- Custom scripts for this template -->
   <script src="js/new-age.min.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-93920714-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-93920714-2');
+  </script>
+
 </body>
 
 </html>
