--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <a href="https://github.com/NaWallet/Resources/blob/master/PrivacyPolicy.md" target="_blank">隐私政策</a>
         </li>
         <li class="list-inline-item">
-            <a href="https://www.notion.so/bakumon/b4047f9bee84420e9aeef9aecec8702b?v=7404de0d835f4833844ae014d19538de" target="_blank">开发计划</a>
+            <a href="https://github.com/orgs/NaWallet/projects/1" target="_blank">开发计划</a>
         </li>
         <li class="list-inline-item">
             <a href="https://github.com/NaWallet/Resources/blob/master/CHANGELOG.md" target="_blank">更新记录</a>
