--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <a href="https://github.com/NaWallet/Resources/blob/master/CHANGELOG.md" target="_blank">更新记录</a>
         </li>
         <li class="list-inline-item">
-          <a href="https://github.com/NaWallet/Resources/blob/master/FAQ.md" target="_blank">FAQ</a>
+          <a href="https://support.qq.com/products/41058/faqs-more" target="_blank">FAQ</a>
         </li>
       </ul>
     </div>
