--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">立即开始记账</h2>
-          <p>这是一款 Android 端的记账应用，可以在 Google Play 或 酷安下载</p>
+          <p>这是一款 Android 端的记账应用，可以在 Google Play 下载</p>
           <div class="badges">
             <a class="badge-link" href="https://play.google.com/store/apps/details?id=me.bakumon.moneykeeper" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="https://www.coolapk.com/apk/me.bakumon.moneykeeper" target="_blank"><img src="img/coolapk-badge.svg" alt=""></a>
           </div>
         </div>
       </div>
