--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="那样记账 - 一款轻量级的 Android 端记账工具。">
+  <meta name="description" content="那样记账 - 纯粹的记账软件">
   <meta name="author" content="Bakumon">
 
-  <title>那样记账 - 轻量级记账工具</title>
+  <title>那样记账 - 纯粹的记账软件</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">那样记账</h1>
-            <h5 class="mb-5">一款轻量级的 Android 端记账工具。</h5>
+            <h5 class="mb-5">一款面向个人、纯粹的记账软件。</h5>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">立即下载</a>
           </div>
         </div>
