--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
   <!-- Custom styles for this template -->
   <link href="css/new-age.min.css" rel="stylesheet">
 
+  <meta property="og:title" content="那样记账 - 纯粹的记账软件" />
+  <meta property="og:locale" content="zh_CN" />
+  <meta name="description" content="一款面向个人、纯粹的记账软件。" />
+  <meta property="og:description" content="一款面向个人、纯粹的记账软件。" />
+  <meta property="og:url" content="https://wallet.bakumon.me/" />
+  <meta property="og:site_name" content="那样记账 - 纯粹的记账软件" />
+  <script
+    type="application/ld+json"> {"description":"一款面向个人、纯粹的记账软件。","@type":"WebSite","url":"https://wallet.bakumon.me/","name":"那样记账 - 纯粹的记账软件","headline":"那样记账 - 纯粹的记账软件","@context":"https://schema.org"}</script>
+  <meta property="og:image" content="https://i.loli.net/2021/07/17/rTUA1PsOGelyxZK.png" />
+  <meta property="og:image:width" content="1090" />
+  <meta property="og:image:height" content="570" />
+  <meta name="twitter:card" content="summary_large_image" />
+
 </head>
 
 <body id="page-top">
